hydro2/hydro2-operator-derive/tests/trybuild/fail_05_too_many_inputs.stderr
error: At most four inputs allowed: input0..input3.
  --> tests/trybuild/fail_05_too_many_inputs.rs:16:5
   |
16 |     input4="i32" // this is the 5th → should fail
   |     ^^^^^^
